@@ -1,0 +1,12 @@
+<?php
+
+namespace SimpleComplex\Utils\Exception;
+
+/**
+ * @package SimpleComplex\Utils
+ */
+
+class CacheInvalidArgumentException extends \InvalidArgumentException implements \Psr\SimpleCache\InvalidArgumentException
+{
+
+}
