@@ -1,0 +1,12 @@
+<?php
+
+namespace SimpleComplex\Utils\Exception;
+
+/**
+ * @package SimpleComplex\Utils
+ */
+
+class ConfigInvalidArgumentException extends CacheInvalidArgumentException
+{
+
+}
